adding admin panel

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -6,3 +6,8 @@ en:
   createEv: "Create event"
   createAdd: "Create address" 
   register: "Register"
+  adminPan: "Admin panel"
+  users: "Users"
+  delete_btn: "Delete"
+  events: "Events"
+  edit_btn: "Update event"
